571 Programming Languages/Assignment/Assignment1/calc.output
Grammar

    0 $accept: stmt $end

    1 stmt: %empty
    2     | stmt expr_stmt

    3 expr_stmt: expr_float TOK_SEMICOLON
    4          | TOK_PRINTLN expr_float TOK_SEMICOLON
    5          | expr TOK_SEMICOLON
    6          | TOK_PRINTLN expr TOK_SEMICOLON

    7 expr_float: expr_float TOK_ADD expr
    8           | expr TOK_ADD expr_float
    9           | expr_float TOK_ADD expr_float
   10           | expr_float TOK_SUB expr
   11           | expr TOK_SUB expr_float
   12           | expr_float TOK_SUB expr_float
   13           | expr_float TOK_MUL expr
   14           | expr TOK_MUL expr_float
   15           | expr_float TOK_MUL expr_float
   16           | expr_float TOK_DIV expr
   17           | expr TOK_DIV expr_float
   18           | expr_float TOK_DIV expr_float
   19           | TOK_FLOAT

   20 expr: expr TOK_ADD expr
   21     | expr TOK_SUB expr
   22     | expr TOK_MUL expr
   23     | expr TOK_DIV expr
   24     | TOK_NUM


Terminals, with rules where they appear

$end (0) 0
error (256)
TOK_SEMICOLON (258) 3 4 5 6
TOK_ADD (259) 7 8 9 20
TOK_SUB (260) 10 11 12 21
TOK_MUL (261) 13 14 15 22
TOK_DIV (262) 16 17 18 23
TOK_NUM (263) 24
TOK_PRINTLN (264) 4 6
TOK_FLOAT (265) 19


Nonterminals, with rules where they appear

$accept (11)
    on left: 0
stmt (12)
    on left: 1 2, on right: 0 2
expr_stmt (13)
    on left: 3 4 5 6, on right: 2
expr_float (14)
    on left: 7 8 9 10 11 12 13 14 15 16 17 18 19, on right: 3 4 7 8
    9 10 11 12 13 14 15 16 17 18
expr (15)
    on left: 20 21 22 23 24, on right: 5 6 7 8 10 11 13 14 16 17 20
    21 22 23


State 0

    0 $accept: . stmt $end

    $default  reduce using rule 1 (stmt)

    stmt  go to state 1


State 1

    0 $accept: stmt . $end
    2 stmt: stmt . expr_stmt

    $end         shift, and go to state 2
    TOK_NUM      shift, and go to state 3
    TOK_PRINTLN  shift, and go to state 4
    TOK_FLOAT    shift, and go to state 5

    expr_stmt   go to state 6
    expr_float  go to state 7
    expr        go to state 8


State 2

    0 $accept: stmt $end .

    $default  accept


State 3

   24 expr: TOK_NUM .

    $default  reduce using rule 24 (expr)


State 4

    4 expr_stmt: TOK_PRINTLN . expr_float TOK_SEMICOLON
    6          | TOK_PRINTLN . expr TOK_SEMICOLON

    TOK_NUM    shift, and go to state 3
    TOK_FLOAT  shift, and go to state 5

    expr_float  go to state 9
    expr        go to state 10


State 5

   19 expr_float: TOK_FLOAT .

    $default  reduce using rule 19 (expr_float)


State 6

    2 stmt: stmt expr_stmt .

    $default  reduce using rule 2 (stmt)


State 7

    3 expr_stmt: expr_float . TOK_SEMICOLON
    7 expr_float: expr_float . TOK_ADD expr
    9           | expr_float . TOK_ADD expr_float
   10           | expr_float . TOK_SUB expr
   12           | expr_float . TOK_SUB expr_float
   13           | expr_float . TOK_MUL expr
   15           | expr_float . TOK_MUL expr_float
   16           | expr_float . TOK_DIV expr
   18           | expr_float . TOK_DIV expr_float

    TOK_SEMICOLON  shift, and go to state 11
    TOK_ADD        shift, and go to state 12
    TOK_SUB        shift, and go to state 13
    TOK_MUL        shift, and go to state 14
    TOK_DIV        shift, and go to state 15


State 8

    5 expr_stmt: expr . TOK_SEMICOLON
    8 expr_float: expr . TOK_ADD expr_float
   11           | expr . TOK_SUB expr_float
   14           | expr . TOK_MUL expr_float
   17           | expr . TOK_DIV expr_float
   20 expr: expr . TOK_ADD expr
   21     | expr . TOK_SUB expr
   22     | expr . TOK_MUL expr
   23     | expr . TOK_DIV expr

    TOK_SEMICOLON  shift, and go to state 16
    TOK_ADD        shift, and go to state 17
    TOK_SUB        shift, and go to state 18
    TOK_MUL        shift, and go to state 19
    TOK_DIV        shift, and go to state 20


State 9

    4 expr_stmt: TOK_PRINTLN expr_float . TOK_SEMICOLON
    7 expr_float: expr_float . TOK_ADD expr
    9           | expr_float . TOK_ADD expr_float
   10           | expr_float . TOK_SUB expr
   12           | expr_float . TOK_SUB expr_float
   13           | expr_float . TOK_MUL expr
   15           | expr_float . TOK_MUL expr_float
   16           | expr_float . TOK_DIV expr
   18           | expr_float . TOK_DIV expr_float

    TOK_SEMICOLON  shift, and go to state 21
    TOK_ADD        shift, and go to state 12
    TOK_SUB        shift, and go to state 13
    TOK_MUL        shift, and go to state 14
    TOK_DIV        shift, and go to state 15


State 10

    6 expr_stmt: TOK_PRINTLN expr . TOK_SEMICOLON
    8 expr_float: expr . TOK_ADD expr_float
   11           | expr . TOK_SUB expr_float
   14           | expr . TOK_MUL expr_float
   17           | expr . TOK_DIV expr_float
   20 expr: expr . TOK_ADD expr
   21     | expr . TOK_SUB expr
   22     | expr . TOK_MUL expr
   23     | expr . TOK_DIV expr

    TOK_SEMICOLON  shift, and go to state 22
    TOK_ADD        shift, and go to state 17
    TOK_SUB        shift, and go to state 18
    TOK_MUL        shift, and go to state 19
    TOK_DIV        shift, and go to state 20


State 11

    3 expr_stmt: expr_float TOK_SEMICOLON .

    $default  reduce using rule 3 (expr_stmt)


State 12

    7 expr_float: expr_float TOK_ADD . expr
    9           | expr_float TOK_ADD . expr_float

    TOK_NUM    shift, and go to state 3
    TOK_FLOAT  shift, and go to state 5

    expr_float  go to state 23
    expr        go to state 24


State 13

   10 expr_float: expr_float TOK_SUB . expr
   12           | expr_float TOK_SUB . expr_float

    TOK_NUM    shift, and go to state 3
    TOK_FLOAT  shift, and go to state 5

    expr_float  go to state 25
    expr        go to state 26


State 14

   13 expr_float: expr_float TOK_MUL . expr
   15           | expr_float TOK_MUL . expr_float

    TOK_NUM    shift, and go to state 3
    TOK_FLOAT  shift, and go to state 5

    expr_float  go to state 27
    expr        go to state 28


State 15

   16 expr_float: expr_float TOK_DIV . expr
   18           | expr_float TOK_DIV . expr_float

    TOK_NUM    shift, and go to state 3
    TOK_FLOAT  shift, and go to state 5

    expr_float  go to state 29
    expr        go to state 30


State 16

    5 expr_stmt: expr TOK_SEMICOLON .

    $default  reduce using rule 5 (expr_stmt)


State 17

    8 expr_float: expr TOK_ADD . expr_float
   20 expr: expr TOK_ADD . expr

    TOK_NUM    shift, and go to state 3
    TOK_FLOAT  shift, and go to state 5

    expr_float  go to state 31
    expr        go to state 32


State 18

   11 expr_float: expr TOK_SUB . expr_float
   21 expr: expr TOK_SUB . expr

    TOK_NUM    shift, and go to state 3
    TOK_FLOAT  shift, and go to state 5

    expr_float  go to state 33
    expr        go to state 34


State 19

   14 expr_float: expr TOK_MUL . expr_float
   22 expr: expr TOK_MUL . expr

    TOK_NUM    shift, and go to state 3
    TOK_FLOAT  shift, and go to state 5

    expr_float  go to state 35
    expr        go to state 36


State 20

   17 expr_float: expr TOK_DIV . expr_float
   23 expr: expr TOK_DIV . expr

    TOK_NUM    shift, and go to state 3
    TOK_FLOAT  shift, and go to state 5

    expr_float  go to state 37
    expr        go to state 38


State 21

    4 expr_stmt: TOK_PRINTLN expr_float TOK_SEMICOLON .

    $default  reduce using rule 4 (expr_stmt)


State 22

    6 expr_stmt: TOK_PRINTLN expr TOK_SEMICOLON .

    $default  reduce using rule 6 (expr_stmt)


State 23

    7 expr_float: expr_float . TOK_ADD expr
    9           | expr_float . TOK_ADD expr_float
    9           | expr_float TOK_ADD expr_float .
   10           | expr_float . TOK_SUB expr
   12           | expr_float . TOK_SUB expr_float
   13           | expr_float . TOK_MUL expr
   15           | expr_float . TOK_MUL expr_float
   16           | expr_float . TOK_DIV expr
   18           | expr_float . TOK_DIV expr_float

    TOK_MUL  shift, and go to state 14
    TOK_DIV  shift, and go to state 15

    $default  reduce using rule 9 (expr_float)


State 24

    7 expr_float: expr_float TOK_ADD expr .
    8           | expr . TOK_ADD expr_float
   11           | expr . TOK_SUB expr_float
   14           | expr . TOK_MUL expr_float
   17           | expr . TOK_DIV expr_float
   20 expr: expr . TOK_ADD expr
   21     | expr . TOK_SUB expr
   22     | expr . TOK_MUL expr
   23     | expr . TOK_DIV expr

    TOK_MUL  shift, and go to state 19
    TOK_DIV  shift, and go to state 20

    $default  reduce using rule 7 (expr_float)


State 25

    7 expr_float: expr_float . TOK_ADD expr
    9           | expr_float . TOK_ADD expr_float
   10           | expr_float . TOK_SUB expr
   12           | expr_float . TOK_SUB expr_float
   12           | expr_float TOK_SUB expr_float .
   13           | expr_float . TOK_MUL expr
   15           | expr_float . TOK_MUL expr_float
   16           | expr_float . TOK_DIV expr
   18           | expr_float . TOK_DIV expr_float

    TOK_MUL  shift, and go to state 14
    TOK_DIV  shift, and go to state 15

    $default  reduce using rule 12 (expr_float)


State 26

    8 expr_float: expr . TOK_ADD expr_float
   10           | expr_float TOK_SUB expr .
   11           | expr . TOK_SUB expr_float
   14           | expr . TOK_MUL expr_float
   17           | expr . TOK_DIV expr_float
   20 expr: expr . TOK_ADD expr
   21     | expr . TOK_SUB expr
   22     | expr . TOK_MUL expr
   23     | expr . TOK_DIV expr

    TOK_MUL  shift, and go to state 19
    TOK_DIV  shift, and go to state 20

    $default  reduce using rule 10 (expr_float)


State 27

    7 expr_float: expr_float . TOK_ADD expr
    9           | expr_float . TOK_ADD expr_float
   10           | expr_float . TOK_SUB expr
   12           | expr_float . TOK_SUB expr_float
   13           | expr_float . TOK_MUL expr
   15           | expr_float . TOK_MUL expr_float
   15           | expr_float TOK_MUL expr_float .
   16           | expr_float . TOK_DIV expr
   18           | expr_float . TOK_DIV expr_float

    $default  reduce using rule 15 (expr_float)


State 28

    8 expr_float: expr . TOK_ADD expr_float
   11           | expr . TOK_SUB expr_float
   13           | expr_float TOK_MUL expr .
   14           | expr . TOK_MUL expr_float
   17           | expr . TOK_DIV expr_float
   20 expr: expr . TOK_ADD expr
   21     | expr . TOK_SUB expr
   22     | expr . TOK_MUL expr
   23     | expr . TOK_DIV expr

    $default  reduce using rule 13 (expr_float)


State 29

    7 expr_float: expr_float . TOK_ADD expr
    9           | expr_float . TOK_ADD expr_float
   10           | expr_float . TOK_SUB expr
   12           | expr_float . TOK_SUB expr_float
   13           | expr_float . TOK_MUL expr
   15           | expr_float . TOK_MUL expr_float
   16           | expr_float . TOK_DIV expr
   18           | expr_float . TOK_DIV expr_float
   18           | expr_float TOK_DIV expr_float .

    $default  reduce using rule 18 (expr_float)


State 30

    8 expr_float: expr . TOK_ADD expr_float
   11           | expr . TOK_SUB expr_float
   14           | expr . TOK_MUL expr_float
   16           | expr_float TOK_DIV expr .
   17           | expr . TOK_DIV expr_float
   20 expr: expr . TOK_ADD expr
   21     | expr . TOK_SUB expr
   22     | expr . TOK_MUL expr
   23     | expr . TOK_DIV expr

    $default  reduce using rule 16 (expr_float)


State 31

    7 expr_float: expr_float . TOK_ADD expr
    8           | expr TOK_ADD expr_float .
    9           | expr_float . TOK_ADD expr_float
   10           | expr_float . TOK_SUB expr
   12           | expr_float . TOK_SUB expr_float
   13           | expr_float . TOK_MUL expr
   15           | expr_float . TOK_MUL expr_float
   16           | expr_float . TOK_DIV expr
   18           | expr_float . TOK_DIV expr_float

    TOK_MUL  shift, and go to state 14
    TOK_DIV  shift, and go to state 15

    $default  reduce using rule 8 (expr_float)


State 32

    8 expr_float: expr . TOK_ADD expr_float
   11           | expr . TOK_SUB expr_float
   14           | expr . TOK_MUL expr_float
   17           | expr . TOK_DIV expr_float
   20 expr: expr . TOK_ADD expr
   20     | expr TOK_ADD expr .
   21     | expr . TOK_SUB expr
   22     | expr . TOK_MUL expr
   23     | expr . TOK_DIV expr

    TOK_MUL  shift, and go to state 19
    TOK_DIV  shift, and go to state 20

    $default  reduce using rule 20 (expr)


State 33

    7 expr_float: expr_float . TOK_ADD expr
    9           | expr_float . TOK_ADD expr_float
   10           | expr_float . TOK_SUB expr
   11           | expr TOK_SUB expr_float .
   12           | expr_float . TOK_SUB expr_float
   13           | expr_float . TOK_MUL expr
   15           | expr_float . TOK_MUL expr_float
   16           | expr_float . TOK_DIV expr
   18           | expr_float . TOK_DIV expr_float

    TOK_MUL  shift, and go to state 14
    TOK_DIV  shift, and go to state 15

    $default  reduce using rule 11 (expr_float)


State 34

    8 expr_float: expr . TOK_ADD expr_float
   11           | expr . TOK_SUB expr_float
   14           | expr . TOK_MUL expr_float
   17           | expr . TOK_DIV expr_float
   20 expr: expr . TOK_ADD expr
   21     | expr . TOK_SUB expr
   21     | expr TOK_SUB expr .
   22     | expr . TOK_MUL expr
   23     | expr . TOK_DIV expr

    TOK_MUL  shift, and go to state 19
    TOK_DIV  shift, and go to state 20

    $default  reduce using rule 21 (expr)


State 35

    7 expr_float: expr_float . TOK_ADD expr
    9           | expr_float . TOK_ADD expr_float
   10           | expr_float . TOK_SUB expr
   12           | expr_float . TOK_SUB expr_float
   13           | expr_float . TOK_MUL expr
   14           | expr TOK_MUL expr_float .
   15           | expr_float . TOK_MUL expr_float
   16           | expr_float . TOK_DIV expr
   18           | expr_float . TOK_DIV expr_float

    $default  reduce using rule 14 (expr_float)


State 36

    8 expr_float: expr . TOK_ADD expr_float
   11           | expr . TOK_SUB expr_float
   14           | expr . TOK_MUL expr_float
   17           | expr . TOK_DIV expr_float
   20 expr: expr . TOK_ADD expr
   21     | expr . TOK_SUB expr
   22     | expr . TOK_MUL expr
   22     | expr TOK_MUL expr .
   23     | expr . TOK_DIV expr

    $default  reduce using rule 22 (expr)


State 37

    7 expr_float: expr_float . TOK_ADD expr
    9           | expr_float . TOK_ADD expr_float
   10           | expr_float . TOK_SUB expr
   12           | expr_float . TOK_SUB expr_float
   13           | expr_float . TOK_MUL expr
   15           | expr_float . TOK_MUL expr_float
   16           | expr_float . TOK_DIV expr
   17           | expr TOK_DIV expr_float .
   18           | expr_float . TOK_DIV expr_float

    $default  reduce using rule 17 (expr_float)


State 38

    8 expr_float: expr . TOK_ADD expr_float
   11           | expr . TOK_SUB expr_float
   14           | expr . TOK_MUL expr_float
   17           | expr . TOK_DIV expr_float
   20 expr: expr . TOK_ADD expr
   21     | expr . TOK_SUB expr
   22     | expr . TOK_MUL expr
   23     | expr . TOK_DIV expr
   23     | expr TOK_DIV expr .

    $default  reduce using rule 23 (expr)
